<resources>
    <string name="app_name">Book Recommendation</string>
    <string name="ic_book">ic_book</string>
    <string name="header_img">header_img</string>
    <string name="catalog">图书分类目录</string>
    <string name="book_title_icon">book_title_icon</string>
    <string name="book_img">book_img</string>
    <string name="description">内容简介</string>
    <string name="bytime">发布时间:</string>
    <string name="like_icon">like_icon</string>
    <string name="link_icon">link_icon</string>
    <string name="empty">暂无数据</string>
</resources>
